[tool.poetry]
name = "mlmw"
version = "0.1.0"
description = "Download legally free textbooks in machine learning in one step."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
